# learning-c

./: .gitignore  English.md  Examination.md  History.md  Makefile  Makefile.am  README.md  Reference.md  clang.c  configure.ac  history.md  reference.md  thread.c
.github/workflows/: c-cpp.yml
C/: Makefile  README.md  base.c
C/base/: Makefile  base.c  def.c  heap.c  input.c  mem.c  overflow.c  readme.md  rnd.c  stack.c  time.c
C/bugcode/: Makefile  longsize.c
C/dynamic_link/: Makefile  so.c  so.h  so_call.c
C/happytime/: mixedtype.c
C/io/: Makefile  client-1.c  client-2.c  index.html  readme.md  server-1.c  server-2.c  server-3.c
C/ipc/: Makefile  pipe.c  readme.md  shm_s.c
C/scope/: Makefile  scope.c  scope.h
C/socket/: Makefile  client.c  server.c  shm_c.c
C/static_link/: Makefile  lib.c  lib.h  lib_call.c
C/tunjinkaotang/: README.md
CPP/: Makefile  func.cpp  func.h  main.cpp  stl.cpp
CPP/11/: Makefile
CPP/class/: Makefile  README.md  class.cpp  class.h  explicit.cpp  overload.cpp
CPP/dynamic_link/: Makefile  so.c  so.h  so_call.cpp  so_call.h
CPP/static_link/: Makefile  lib.c  lib.h  lib_call.cpp
CPP/stl/: Makefile  map.cpp  set.cpp  std.cpp  string.cpp  vector.cpp
CPP/thread/: Makefile  base.cpp  pc.cpp  pc11.cpp
CPP/whatsnew/: 11.cpp  (+3 more)
FreeBSD/: Makefile  README.md  kevent.c  kqueue.c
Linux/: 2038.c  Makefile  README.md  color.c  curses.c  epoll.c  fileio.c  readline.c  scancode.c  syslog.c
algorithm/: Makefile  README.md  bitcoin.c  sort.cpp
autotools/: Makefile.am  README.md  clean.sh  configure.ac  main.c  make.sh
c/: Makefile
cmake/: CMakeLists.txt  demo.cpp
gui/: README.md  windows_sdk.cpp
happytime/: fire.c
history/: README.md
lib/: Makefile  README.md  sdl.cpp
tunjinkaotang/: tunjinkaotang.sln
(+28 files in other folders)
