#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(main, 1.0, pengyuwei@gmail.com)

AM_INIT_AUTOMAKE

# Checks for programs.
# to use C++, use AC_PROG_CXX
AC_PROG_CC

# use AC_CONFIG_FILES change output file name
# AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile)
